cabal-version: 3.8
name: aihc-resolve
version: 0.1.0.0
build-type: Simple
license: NONE
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Compilers
synopsis: Name resolution for parsed Haskell modules

library
  exposed-modules:
    Aihc.Resolve
    Aihc.Resolve.Types

  hs-source-dirs: src
  build-depends:
    aihc-parser,
    base >=4.16 && <5,
    containers,
    text >=1.2,

  ghc-options: -Wall
  default-language: GHC2021

executable resolve-progress
  hs-source-dirs:
    app/resolve-progress
    common

  main-is: Main.hs
  other-modules:
    ResolverGolden

  build-depends:
    aeson,
    aihc-parser,
    aihc-resolve,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    text,
    yaml,

  ghc-options: -Wall
  default-language: Haskell2010

executable resolve-extension-progress
  hs-source-dirs:
    app/resolve-extension-progress
    common

  main-is: Main.hs
  other-modules:
    ResolverGolden

  build-depends:
    aeson,
    aihc-parser,
    aihc-resolve,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    text,
    yaml,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    common

  main-is: Spec.hs
  other-modules:
    ResolverGolden
    Test.Resolver.Suite

  build-depends:
    aeson,
    aihc-parser,
    aihc-resolve,
    base >=4.16 && <5,
    bytestring,
    containers,
    directory,
    filepath,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,
    yaml,

  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: Haskell2010
