cabal-version:      3.8
name:               aihc-tc
version:            0.1.0.0
build-type:         Simple
license:            NONE
license-file:       LICENSE
author:             David Himmelstrup
maintainer:         lemmih@gmail.com
category:           Compilers
synopsis:           OutsideIn(X) type checker for parsed Haskell modules

library
  exposed-modules:
      Aihc.Tc
    , Aihc.Tc.Types
    , Aihc.Tc.Evidence
    , Aihc.Tc.Constraint
    , Aihc.Tc.Monad
    , Aihc.Tc.Env
    , Aihc.Tc.Annotations
    , Aihc.Tc.Generate.Expr
    , Aihc.Tc.Generate.Decl
    , Aihc.Tc.Solve
    , Aihc.Tc.Solve.Worklist
    , Aihc.Tc.Solve.InertSet
    , Aihc.Tc.Solve.Canonicalize
    , Aihc.Tc.Solve.Equality
    , Aihc.Tc.Solve.Dict
    , Aihc.Tc.Unify
    , Aihc.Tc.Zonk
    , Aihc.Tc.Instantiate
    , Aihc.Tc.Generalize
    , Aihc.Tc.Error
  hs-source-dirs:   src
  build-depends:
      base >=4.16 && <5
    , aihc-parser
    , text >=1.2
    , containers
    , transformers
  ghc-options:        -Wall -Werror
  default-language: GHC2021

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:
      test
    , common
  main-is:          Spec.hs
  other-modules:
      TcGolden
    , Test.Tc.Suite
    , Test.Tc.Properties
  build-depends:
      base >=4.16 && <5
    , aihc-tc
    , aihc-parser
    , text
    , containers
    , directory
    , filepath
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , aeson
    , bytestring
    , yaml
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
