cabal-version: 3.8
name: aihc-wasm
version: 0.1.0.0
build-type: Simple
license: Unlicense
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Direct WebAssembly backend for AIHC GRIN
data-files:
  runtime/aihc_wasip3.c
  runtime/include/stdlib.h
  runtime/include/string.h
  runtime/wit/command.wit
  runtime/wit/deps/cli.wit

library
  autogen-modules:
    Paths_aihc_wasm

  other-modules:
    Paths_aihc_wasm

  exposed-modules:
    Aihc.Wasm
    Aihc.Wasm.Codegen

  hs-source-dirs: src
  build-depends:
    aihc-grin,
    aihc-native,
    aihc-tc,
    base >=4.16 && <5,
    bytestring,
    containers,
    text,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test

  main-is: Spec.hs
  other-modules:
    Test.Wasm.Suite

  build-depends:
    aihc-grin,
    aihc-tc,
    aihc-wasm,
    base >=4.16 && <5,
    containers,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021
