cabal-version: 3.8
name: aihc-internal
version: 9.1204.0
build-type: Simple
license: NONE
synopsis: Empty API-compatible standin for a GHC boot library

library
  exposed-modules:
    GHC.Internal.Arr
    GHC.Internal.ArrayArray
    GHC.Internal.Base
    GHC.Internal.Bits
    GHC.Internal.ByteOrder
    GHC.Internal.Char
    GHC.Internal.Clock
    GHC.Internal.ClosureTypes
    GHC.Internal.Conc.Bound
    GHC.Internal.Conc.IO
    GHC.Internal.Conc.Signal
    GHC.Internal.Conc.Sync
    GHC.Internal.ConsoleHandler
    GHC.Internal.Control.Arrow
    GHC.Internal.Control.Category
    GHC.Internal.Control.Concurrent.MVar
    GHC.Internal.Control.Exception
    GHC.Internal.Control.Exception.Base
    GHC.Internal.Control.Monad
    GHC.Internal.Control.Monad.Fail
    GHC.Internal.Control.Monad.Fix
    GHC.Internal.Control.Monad.IO.Class
    GHC.Internal.Control.Monad.ST
    GHC.Internal.Control.Monad.ST.Imp
    GHC.Internal.Control.Monad.ST.Lazy
    GHC.Internal.Control.Monad.ST.Lazy.Imp
    GHC.Internal.Control.Monad.Zip
    GHC.Internal.Data.Bits
    GHC.Internal.Data.Bool
    GHC.Internal.Data.Coerce
    GHC.Internal.Data.Data
    GHC.Internal.Data.Dynamic
    GHC.Internal.Data.Either
    GHC.Internal.Data.Eq
    GHC.Internal.Data.Foldable
    GHC.Internal.Data.Function
    GHC.Internal.Data.Functor
    GHC.Internal.Data.Functor.Const
    GHC.Internal.Data.Functor.Identity
    GHC.Internal.Data.Functor.Utils
    GHC.Internal.Data.IORef
    GHC.Internal.Data.Ix
    GHC.Internal.Data.List
    GHC.Internal.Data.List.NonEmpty
    GHC.Internal.Data.Maybe
    GHC.Internal.Data.Monoid
    GHC.Internal.Data.OldList
    GHC.Internal.Data.Ord
    GHC.Internal.Data.Proxy
    GHC.Internal.Data.STRef
    GHC.Internal.Data.STRef.Strict
    GHC.Internal.Data.Semigroup.Internal
    GHC.Internal.Data.String
    GHC.Internal.Data.Traversable
    GHC.Internal.Data.Tuple
    GHC.Internal.Data.Type.Bool
    GHC.Internal.Data.Type.Coercion
    GHC.Internal.Data.Type.Equality
    GHC.Internal.Data.Type.Ord
    GHC.Internal.Data.Typeable
    GHC.Internal.Data.Unique
    GHC.Internal.Data.Version
    GHC.Internal.Data.Void
    GHC.Internal.Debug.Trace
    GHC.Internal.Desugar
    GHC.Internal.Encoding.UTF8
    GHC.Internal.Enum
    GHC.Internal.Environment
    GHC.Internal.Err
    GHC.Internal.Event
    GHC.Internal.Event.TimeOut
    GHC.Internal.Exception
    GHC.Internal.Exception.Backtrace
    GHC.Internal.Exception.Context
    GHC.Internal.Exception.Type
    GHC.Internal.ExecutionStack
    GHC.Internal.ExecutionStack.Internal
    GHC.Internal.Exts
    GHC.Internal.Fingerprint
    GHC.Internal.Fingerprint.Type
    GHC.Internal.Float
    GHC.Internal.Float.ConversionUtils
    GHC.Internal.Float.RealFracMethods
    GHC.Internal.Foreign.C.ConstPtr
    GHC.Internal.Foreign.C.Error
    GHC.Internal.Foreign.C.String
    GHC.Internal.Foreign.C.String.Encoding
    GHC.Internal.Foreign.C.Types
    GHC.Internal.Foreign.Concurrent
    GHC.Internal.Foreign.ForeignPtr
    GHC.Internal.Foreign.ForeignPtr.Imp
    GHC.Internal.Foreign.ForeignPtr.Unsafe
    GHC.Internal.Foreign.Marshal.Alloc
    GHC.Internal.Foreign.Marshal.Array
    GHC.Internal.Foreign.Marshal.Error
    GHC.Internal.Foreign.Marshal.Pool
    GHC.Internal.Foreign.Marshal.Safe
    GHC.Internal.Foreign.Marshal.Unsafe
    GHC.Internal.Foreign.Marshal.Utils
    GHC.Internal.Foreign.Ptr
    GHC.Internal.Foreign.StablePtr
    GHC.Internal.Foreign.Storable
    GHC.Internal.ForeignPtr
    GHC.Internal.ForeignSrcLang
    GHC.Internal.Functor.ZipList
    GHC.Internal.GHCi
    GHC.Internal.GHCi.Helpers
    GHC.Internal.Generics
    GHC.Internal.IO
    GHC.Internal.IO.Buffer
    GHC.Internal.IO.BufferedIO
    GHC.Internal.IO.Device
    GHC.Internal.IO.Encoding
    GHC.Internal.IO.Encoding.CodePage
    GHC.Internal.IO.Encoding.Failure
    GHC.Internal.IO.Encoding.Iconv
    GHC.Internal.IO.Encoding.Latin1
    GHC.Internal.IO.Encoding.Types
    GHC.Internal.IO.Encoding.UTF16
    GHC.Internal.IO.Encoding.UTF32
    GHC.Internal.IO.Encoding.UTF8
    GHC.Internal.IO.Exception
    GHC.Internal.IO.FD
    GHC.Internal.IO.Handle
    GHC.Internal.IO.Handle.FD
    GHC.Internal.IO.Handle.Internals
    GHC.Internal.IO.Handle.Lock
    GHC.Internal.IO.Handle.Text
    GHC.Internal.IO.Handle.Types
    GHC.Internal.IO.IOMode
    GHC.Internal.IO.StdHandles
    GHC.Internal.IO.SubSystem
    GHC.Internal.IO.Unsafe
    GHC.Internal.IOArray
    GHC.Internal.IOPort
    GHC.Internal.IORef
    GHC.Internal.InfoProv
    GHC.Internal.InfoProv.Types
    GHC.Internal.Int
    GHC.Internal.Integer
    GHC.Internal.Integer.Logarithms
    GHC.Internal.IsList
    GHC.Internal.Ix
    GHC.Internal.LanguageExtensions
    GHC.Internal.Lexeme
    GHC.Internal.List
    GHC.Internal.MVar
    GHC.Internal.Maybe
    GHC.Internal.Natural
    GHC.Internal.Num
    GHC.Internal.Numeric
    GHC.Internal.Numeric.Natural
    GHC.Internal.OverloadedLabels
    GHC.Internal.Pack
    GHC.Internal.Profiling
    GHC.Internal.Ptr
    GHC.Internal.RTS.Flags
    GHC.Internal.RTS.Flags.Test
    GHC.Internal.Read
    GHC.Internal.Real
    GHC.Internal.Records
    GHC.Internal.ResponseFile
    GHC.Internal.ST
    GHC.Internal.STRef
    GHC.Internal.Show
    GHC.Internal.Stable
    GHC.Internal.StableName
    GHC.Internal.Stack
    GHC.Internal.Stack.CCS
    GHC.Internal.Stack.CloneStack
    GHC.Internal.Stack.Types
    GHC.Internal.StaticPtr
    GHC.Internal.Stats
    GHC.Internal.Storable
    GHC.Internal.System.Environment
    GHC.Internal.System.Environment.Blank
    GHC.Internal.System.Exit
    GHC.Internal.System.IO
    GHC.Internal.System.IO.Error
    GHC.Internal.System.Mem
    GHC.Internal.System.Mem.StableName
    GHC.Internal.System.Posix.Internals
    GHC.Internal.System.Posix.Types
    GHC.Internal.TH.Lib
    GHC.Internal.TH.Lift
    GHC.Internal.TH.Quote
    GHC.Internal.TH.Syntax
    GHC.Internal.Text.ParserCombinators.ReadP
    GHC.Internal.Text.ParserCombinators.ReadPrec
    GHC.Internal.Text.Read
    GHC.Internal.Text.Read.Lex
    GHC.Internal.Text.Show
    GHC.Internal.TopHandler
    GHC.Internal.Type.Reflection
    GHC.Internal.Type.Reflection.Unsafe
    GHC.Internal.TypeError
    GHC.Internal.TypeLits
    GHC.Internal.TypeLits.Internal
    GHC.Internal.TypeNats
    GHC.Internal.TypeNats.Internal
    GHC.Internal.Unicode
    GHC.Internal.Unsafe.Coerce
    GHC.Internal.Weak
    GHC.Internal.Weak.Finalize
    GHC.Internal.Word
    GHC.Num.BigNat
    GHC.Num.Integer
    GHC.Num.Natural
    GHC.Tuple

  hs-source-dirs: src
  default-extensions: NoImplicitPrelude
  ghc-options: -Wall
  default-language: GHC2021
