cabal-version: 3.8
name: aihc-dev
version: 0.1.0.0
build-type: Simple
license: MIT
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Developer tools for the aihc compiler

library extract-hi
  hs-source-dirs: src
  exposed-modules:
    Aihc.Dev.ExtractHi
    Aihc.Dev.ExtractHi.ToResolveIface
    Aihc.Dev.ExtractHi.Types

  other-modules:
    Aihc.Dev.ExtractHi.GhcSession

  build-depends:
    aeson >=2.0 && <2.3,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.8,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    ghc >=9.12 && <9.13,
    process >=1.6 && <1.8,
    text >=1.2.3 && <2.2,

  default-extensions: OverloadedStrings
  ghc-options: -Wall
  default-language: GHC2021

library snippet
  hs-source-dirs: src
  exposed-modules:
    Aihc.Dev.Snippet

  build-depends:
    Diff,
    aihc-cpp,
    aihc-hackage,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    deepseq,
    filepath >=1.3.0.1 && <1.6,
    ghc-lib-parser,
    prettyprinter,
    text >=1.2.3 && <2.2,

  default-extensions: OverloadedStrings
  ghc-options: -Wall
  default-language: GHC2021

executable aihc-dev
  main-is: Main.hs
  hs-source-dirs:
    exe
    app/stackage-progress
    app/resolve-stackage-progress

  other-modules:
    Aihc.Dev.HackageTester.Run
    BootInterface
    ResolveStackageProgress
    StackageProgress.CLI
    StackageProgress.FileChecker
    StackageProgress.FileCheckerTiming
    StackageProgress.PackageRunner
    StackageProgress.Run
    StackageProgress.Snapshot

  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    aeson >=2.0 && <2.3,
    aeson-pretty >=0.8 && <0.9,
    aihc-cpp,
    aihc-dev:extract-hi,
    aihc-dev:snippet,
    aihc-hackage,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    aihc-resolve,
    async,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.8,
    deepseq,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    ghc-lib-parser,
    haskell-src-exts,
    optparse-applicative >=0.16 && <0.19,
    prettyprinter,
    process >=1.6 && <1.8,
    text >=1.2.3 && <2.2,
    yaml >=0.11 && <0.12,

  default-extensions: OverloadedStrings
  ghc-options:
    -Wall
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:
    test
    app/stackage-progress

  main-is: Spec.hs
  other-modules:
    StackageProgress.CLI
    StackageProgress.FileChecker
    StackageProgress.FileCheckerTiming
    Test.ResolveStackageProgress.PathsModule
    Test.StackageProgress.FileChecker
    Test.StackageProgress.FileCheckerTiming

  build-depends:
    aeson >=2.0 && <2.3,
    aihc-cpp,
    aihc-dev:snippet,
    aihc-hackage,
    aihc-parser,
    aihc-parser:parser-tooling-common,
    aihc-resolve,
    base >=4.16 && <5,
    bytestring,
    containers,
    deepseq,
    directory,
    filepath,
    haskell-src-exts,
    optparse-applicative >=0.16 && <0.19,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text >=1.2.3 && <2.2,

  ghc-options: -Wall
  default-language: GHC2021
