cabal-version: 3.8
name: aihc-hackage
version: 0.1.0.0
build-type: Simple
license: MIT
license-file: LICENSE
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Shared Hackage/Stackage download and cabal-file utilities

library
  exposed-modules:
    Aihc.Hackage.Cabal
    Aihc.Hackage.Cache
    Aihc.Hackage.Cpp
    Aihc.Hackage.Download
    Aihc.Hackage.Stackage
    Aihc.Hackage.Types
    Aihc.Hackage.Util
    Aihc.Hackage.VersionResolver

  hs-source-dirs: src
  build-depends:
    Cabal >=3.14 && <3.17,
    Cabal-syntax >=3.14 && <3.17,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.8,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    http-client >=0.5 && <0.8,
    http-client-tls >=0.2 && <0.4,
    http-types >=0.9 && <0.13,
    tar >=0.5 && <0.7,
    text >=1.2.3 && <2.2,
    zlib >=0.5.4 && <0.8,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    aihc-hackage,
    base >=4.16 && <5,
    bytestring,
    directory,
    filepath,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    text,

  ghc-options: -Wall
  default-language: GHC2021
