cabal-version: 3.8
name: aihc-parser-tooling-common
version: 0.1.0.0
build-type: Simple
license: Unlicense
author: David Himmelstrup
maintainer: lemmih@gmail.com
category: Development
synopsis: Internal parser tooling support for aihc
description:
  Internal parser test and developer tooling support for the aihc workspace.

library
  hs-source-dirs: ../../components/aihc-parser/common
  exposed-modules:
    ConcurrentProgress
    CppSupport
    ExtensionSupport
    GhcOracle
    HackageSupport
    HackageTester.CLI
    HackageTester.Model
    HseExtensions
    LexerGolden
    ParserEquivalent
    ParserErrorGolden
    ParserGolden
    ParserValidation
    ShrinkUtils
    StackageProgress.Summary

  build-depends:
    Cabal-syntax >=3.14 && <3.17,
    Diff >=1.0 && <1.1,
    aeson >=2.0 && <2.3,
    aihc-cpp >=1.0 && <1.1,
    aihc-hackage >=0.1 && <0.2,
    aihc-parser >=1.0 && <1.1,
    async >=2.2 && <2.3,
    base >=4.16 && <5,
    bytestring >=0.10.8 && <0.13,
    containers >=0.5 && <0.8,
    deepseq >=1.4 && <1.6,
    directory >=1.2.3 && <1.5,
    filepath >=1.3.0.1 && <1.6,
    ghc-lib-parser >=9.14.1 && <9.15,
    haskell-src-exts >=1.23 && <1.24,
    http-client >=0.7 && <0.8,
    http-client-tls >=0.3 && <0.4,
    megaparsec >=9.0 && <10,
    optparse-applicative >=0.16 && <0.19,
    prettyprinter >=1.7 && <1.8,
    text >=1.2.3 && <2.2,
    yaml >=0.11 && <0.12,

  ghc-options: -Wall
  default-language: GHC2021

executable parser-progress
  main-is: Main.hs
  hs-source-dirs: ../../components/aihc-parser/app/parser-progress
  build-depends:
    aihc-parser-tooling-common,
    base >=4.16 && <5,

  ghc-options: -Wall
  default-language: GHC2021

executable lexer-progress
  main-is: Main.hs
  hs-source-dirs: ../../components/aihc-parser/app/lexer-progress
  build-depends:
    aihc-parser-tooling-common,
    base >=4.16 && <5,

  ghc-options: -Wall
  default-language: GHC2021

executable parser-extension-progress
  main-is: Main.hs
  hs-source-dirs: ../../components/aihc-parser/app/extension-progress
  build-depends:
    aihc-parser-tooling-common,
    base >=4.16 && <5,
    containers >=0.5 && <0.8,
    text >=1.2.3 && <2.2,

  ghc-options: -Wall
  default-language: GHC2021
