cabal-version: 3.8
name: aihc-ucd2haskell
version: 0.1.0.0
build-type: Simple
license: BSD-3-Clause
synopsis: Generate AIHC Unicode lookup modules from the UCD

library
  exposed-modules: Ucd2Haskell
  hs-source-dirs: src
  build-depends:
    base >=4.18 && <5,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,

  ghc-options: -Wall
  default-language: GHC2021

executable ucd2haskell
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    aihc-ucd2haskell,
    base >=4.18 && <5,

  ghc-options: -Wall
  default-language: GHC2021

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    aihc-ucd2haskell,
    base >=4.18 && <5,
    tasty,
    tasty-hunit,
    tasty-quickcheck,

  ghc-options: -Wall
  default-language: GHC2021
