Name:         Clipboard
Version:      2.3.2.2
Author:       Sævar Berg (Windows), Matthew Bekkema (X11), Daniel Casanueva (Maintainer)
License:      BSD3
License-file: license
Maintainer:   Daniel Casanueva (coding `at` danielcasanueva.eu)
Category:     System
Stability:    Stable
Synopsis:     System clipboard interface.
Bug-reports:  https://codeberg.org/daniel-casanueva/Clipboard/issues
Description:    
  /Clipboard/ is a library for easily interfacing with the system clipboard with additional unicode support.
  Currently, only in a Windows or GNU/Linux (X11) system.
  .
  For example, if you type:
  .
  > $ setClipboardString "Hello, World!"
  .
  Then you have @\"Hello, World!\"@ available to be pasted wherever you want.
  .
  Now, if you type:
  .
  > $ modifyClipboardString reverse
  .
  You will have @\"!dlroW ,olleH\"@ in your clipboard. So:
  .
  > $ getClipboardString
  > "!dlroW ,olleH"
  .
  The X11 version depends on the @X11@ package, so you will need the X11 development library
  available on your system at compile time. You can install it with @apt install libxrandr-dev@
  (or the equivalent on your system).
Build-type: Simple
Cabal-version: 1.18
Extra-doc-files: README.md, changelog.md

Library
  Exposed-modules: System.Clipboard
  Default-Language: Haskell2010
  Default-extensions: CPP
  if os(windows)
    Build-depends:  base == 4.*
                  , Win32 >= 2.2.0.0 && < 2.4
    Other-modules:  System.Clipboard.Windows
  else
    Build-depends:  base == 4.*
                  , X11 >= 1.6
                  , utf8-string
                  , unix
                  , directory
    Other-modules:  System.Clipboard.X11
